# catalogo_facil

./: READEME.md  README.md  catalogo-Teste-Nome Loja.html
catalogo_facil/: config.py  pyproject.toml  requirements.txt  run.py
catalogo_facil/app/: __init__.py  extensions.py
catalogo_facil/app/models/: __init__.py  catalog.py  category.py  client.py  product.py  sale.py  shop.py
catalogo_facil/app/routes/: __init__.py  catalogs.py  categories.py  clients.py  main.py  products.py  sales.py  shops.py
catalogo_facil/app/static/css/: style.css
catalogo_facil/app/static/css/core/: base.css  catalog.css  components.css  forms.css  layout.css  tables.css
catalogo_facil/app/static/css/pages/: home.css
catalogo_facil/app/templates/: base.html  home.html
catalogo_facil/app/templates/catalog/: form.html  list.html  printable.html
catalogo_facil/app/templates/categories/: detail.html  form.html  list.html
catalogo_facil/app/templates/clients/: detail.html  form.html  list.html
catalogo_facil/app/templates/partials/: pagination.html
catalogo_facil/app/templates/products/: form.html  list.html
catalogo_facil/app/templates/sales/: detail.html  form.html  list.html  search.html
catalogo_facil/app/templates/shops/: form.html
catalogo_facil/app/utils/: __init__.py  catalog_schemas.py  formatters.py  images.py  sorting.py  validators.py  whatsapp.py
catalogo_facil/app/utils/sales/: sales_charts.py  sales_metrics.py  sales_report.py
